# fast-api-interview-test-app

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  crud.py  database.py  docker-compose.yml  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
src/: auth.py  config.py  crud.py  database.py  models.py
