[tool.poetry]
name = "fast-api-interview-test-app"
version = "0.1.0"
description = ""
authors = ["vladislv31 <vladislv.k31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
SQLAlchemy = "^1.4.41"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.2"}
psycopg2-binary = "^2.9.3"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
